--- a/index.html
+++ b/index.html
@@ -16,33 +16,71 @@
       font-size: 1.2rem;
       font-weight: bold;
     }
-    button {
+    button, select {
       padding: 1rem 2rem;
       font-size: 1rem;
       border: none;
       border-radius: 8px;
+      margin-top: 1rem;
+    }
+    button {
       background-color: #4caf50;
       color: white;
       cursor: pointer;
+    }
+    #showAbsentBtn {
+      background-color: #2196f3;
     }
     button:disabled {
       background-color: #cccccc;
       cursor: not-allowed;
     }
+    select {
+      background-color: #ffffff;
+      border: 1px solid #ccc;
+    }
+    .absents {
+      margin-top: 2rem;
+      text-align: left;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .absents ul {
+      padding-left: 1rem;
+      list-style-type: disc;
+    }
   </style>
 </head>
 <body>
   <h1>Check-in NFC</h1>
-  <p>Premi il pulsante e avvicina un tag NFC</p>
+  <p>Seleziona l'attività e avvicina il tag NFC</p>
+
+  <select id="activity">
+    <option value="Scotland Games">Scotland Games</option>
+    <option value="Pechino Express">Pechino Express</option>
+    <option value="Check-in Generale">Check-in Generale</option>
+  </select>
+
+  <br />
   <button id="scanBtn">Scansiona Tag</button>
+  <button id="showAbsentBtn">Visualizza Assenti</button>
+
   <div class="status" id="status"></div>
+  <div class="absents" id="absents"></div>
 
   <script>
     const statusDiv = document.getElementById("status");
     const scanBtn = document.getElementById("scanBtn");
-    const scriptURL = "https://prod-02.westeurope.logic.azure.com:443/workflows/37d93362a8f8480b8e19ca62e6513f8f/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=yUgClpye4amrJZVnz2HqOljfma-6trQBut8nUoXNEAY"; // <-- inserisci qui il tuo URL
+    const showAbsentBtn = document.getElementById("showAbsentBtn");
+    const activitySelect = document.getElementById("activity");
+    const absentsDiv = document.getElementById("absents");
+
+    const scriptURL = "https://prod-02.westeurope.logic.azure.com:443/workflows/37d93362a8f8480b8e19ca62e6513f8f/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=yUgClpye4amrJZVnz2HqOljfma-6trQBut8nUoXNEAY"; // <-- inserisci qui il tuo URL Power Automate
 
     scanBtn.addEventListener("click", async () => {
+      const activity = activitySelect.value;
+
       if ("NDEFReader" in window) {
         const ndef = new NDEFReader();
         try {
@@ -55,14 +93,15 @@
 
             try {
               const response = await fetch(scriptURL, {
-                                                method: "POST",
-                                                headers: {
-                                                  "Content-Type": "application/json",
-                                                },
-                                                body: JSON.stringify({ uid }),
-                                              });
-              const text = await response.text();
-              statusDiv.textContent = `✅ ${text}`;
+                method: "POST",
+                headers: {
+                  "Content-Type": "application/json",
+                },
+                body: JSON.stringify({ uid, activity }),
+              });
+
+              const result = await response.json();
+              statusDiv.textContent = `✅ ${result.message || "Check-in completato"}`;
             } catch (err) {
               statusDiv.textContent = "❌ Errore durante l'invio dei dati.";
               console.error(err);
@@ -74,6 +113,32 @@
         }
       } else {
         statusDiv.textContent = "❌ NFC non supportato da questo browser.";
+      }
+    });
+
+    showAbsentBtn.addEventListener("click", async () => {
+      const activity = activitySelect.value;
+      absentsDiv.innerHTML = "Caricamento elenco assenti...";
+
+      try {
+        const response = await fetch(scriptURL, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ activity, get_absents: true }),
+        });
+
+        const result = await response.json();
+        if (result.absents && result.absents.length > 0) {
+          absentsDiv.innerHTML = `<strong>Assenti per "${activity}":</strong><ul>` +
+            result.absents.map(name => `<li>${name}</li>`).join("") + "</ul>";
+        } else {
+          absentsDiv.innerHTML = `✅ Tutti i partecipanti hanno fatto check-in per "${activity}"!`;
+        }
+      } catch (err) {
+        absentsDiv.innerHTML = "❌ Errore durante il recupero degli assenti.";
+        console.error(err);
       }
     });
   </script>
