--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     const absentsDiv = document.getElementById("absents");
     const checkinLogDiv = document.getElementById("checkinLog");
 
-    const scriptURL = "https://prod-02.westeurope.logic.azure.com:443/workflows/37d93362a8f8480b8e19ca62e6513f8f/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=yUgClpye4amrJZVnz2HqOljfma-6trQBut8nUoXNEAY";
+    const scriptURL = "https://95jn88mkl8.execute-api.eu-west-1.amazonaws.com/checkin";
 
     let checkinLog = [];
     let ndef;
