--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       font-size: 2rem;
       margin-bottom: 2rem;
     }
+    img {
+      max-width: 300px;
+      margin-bottom: 2rem;
+    }
     button {
       padding: 1.5rem 2.5rem;
       margin: 1rem;
@@ -38,6 +42,7 @@
   </style>
 </head>
 <body>
+  <img src="0220_logo-TB-01.png" alt="Logo Team Building 2025">
   <h1>Benvenuto al Team Building 2025</h1>
   <button onclick="location.href='checkin.html'">🔐 Check-in Partecipanti</button>
   <button class="dashboard" onclick="location.href='dashboard.html'">📊 Dashboard Organizzatori</button>
