--- a/admin.html
+++ b/admin.html
@@ -1,92 +1,3 @@
-Admin Page
-1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-29
-30
-31
-32
-33
-34
-35
-36
-37
-38
-39
-40
-41
-42
-43
-44
-45
-46
-47
-48
-49
-50
-51
-52
-53
-54
-55
-56
-57
-58
-59
-60
-61
-62
-63
-64
-65
-66
-67
-68
-69
-70
-71
-72
-73
-74
-75
-76
-77
-78
-79
-80
-81
-82
-83
-84
-85
-86
-87
-88
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -109,12 +20,12 @@ Admin Page
       margin-bottom: 2rem;
       box-shadow: 0 0 5px rgba(0,0,0,0.1);
     }
-    label, input, button, select, textarea {
+    label, input, button, select {
       display: block;
       margin: 0.5rem auto;
       padding: 0.5rem;
       width: 90%;
-      max-width: 500px;
+      max-width: 400px;
       font-size: 1rem;
     }
     table {
@@ -141,19 +52,8 @@ Admin Page
 
   <section>
     <h2>Aggiungi Partecipante</h2>
-    <input id="nome" placeholder="Nome" />
-    <input id="cognome" placeholder="Cognome" />
-    <input id="nickname" placeholder="Nickname" />
-    <input id="sede" placeholder="Sede" />
-    <input id="bu" placeholder="BU" />
-    <input id="uid" placeholder="UID (tag NFC)" />
-    <input id="email" placeholder="Email" />
-    <input id="telefono" placeholder="Telefono" />
-    <input id="coinquilino" placeholder="Coinquilino (opzionale)" />
-    <input id="sesso" placeholder="Sesso (opzionale)" />
-    <input id="taglia" placeholder="Taglia (opzionale)" />
-    <input id="viaggio" placeholder="Viaggio prenotato (opzionale)" />
-    <textarea id="note" placeholder="Note (opzionali)"></textarea>
+    <input type="text" id="newName" placeholder="Nome" required />
+    <input type="text" id="newUID" placeholder="UID (tag NFC)" required />
     <button onclick="addPartecipante()">➕ Aggiungi Partecipante</button>
     <table id="partecipantiTable">
       <thead><tr><th>Nome</th><th>UID</th><th>Azioni</th></tr></thead>
@@ -175,4 +75,87 @@ Admin Page
     const apiURL = "https://95jn88mkl8.execute-api.eu-west-1.amazonaws.com/checkin";
 
     async function loadPartecipanti() {
+      const res = await fetch(apiURL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ get_all_participants: true })
+      });
+      const data = await res.json();
+      const table = document.querySelector("#partecipantiTable tbody");
+      table.innerHTML = "";
+      data.participants.forEach(p => {
+        const row = document.createElement("tr");
+        row.innerHTML = `<td>${p.nome}</td><td>${p.uid}</td><td><button class='delete' onclick="deletePartecipante('${p.uid}')">Elimina</button></td>`;
+        table.appendChild(row);
+      });
+    }
 
+    async function addPartecipante() {
+      const nome = document.getElementById("newName").value.trim();
+      const uid = document.getElementById("newUID").value.trim();
+      if (!nome || !uid) return alert("Inserisci nome e UID");
+      await fetch(apiURL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ add_participant: true, nome, uid })
+      });
+      document.getElementById("newName").value = "";
+      document.getElementById("newUID").value = "";
+      loadPartecipanti();
+    }
+
+    async function deletePartecipante(uid) {
+      if (!confirm("Eliminare questo partecipante?")) return;
+      await fetch(apiURL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ delete_participant: true, uid })
+      });
+      loadPartecipanti();
+    }
+
+    async function loadAttivita() {
+      const res = await fetch(apiURL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ get_activities: true })
+      });
+      const data = await res.json();
+      const table = document.querySelector("#attivitaTable tbody");
+      table.innerHTML = "";
+      data.activities.forEach(a => {
+        const row = document.createElement("tr");
+        row.innerHTML = `<td>${a}</td><td><button class='delete' onclick="deleteAttivita('${a}')">Elimina</button></td>`;
+        table.appendChild(row);
+      });
+    }
+
+    async function addAttivita() {
+      const nome = document.getElementById("newAttivita").value.trim();
+      if (!nome) return alert("Inserisci il nome dell'attività");
+      await fetch(apiURL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ add_activity: true, nome })
+      });
+      document.getElementById("newAttivita").value = "";
+      loadAttivita();
+    }
+
+    async function deleteAttivita(nome) {
+      if (!confirm("Eliminare questa attività?")) return;
+      await fetch(apiURL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ delete_activity: true, nome })
+      });
+      loadAttivita();
+    }
+
+    window.addEventListener("DOMContentLoaded", () => {
+      loadPartecipanti();
+      loadAttivita();
+    });
+  </script>
+</body>
+</html>
