--- a/admin.html
+++ b/admin.html
@@ -103,7 +103,12 @@
 
     async function addPartecipante() {
       const requiredFields = ["nome", "cognome", "nickname", "sede", "bu", "uid", "email", "telefono"];
-      const missing = requiredFields.filter(id => !document.getElementById(id).value.trim());
+      const missing = requiredFields.filter(id => {
+        const el = document.getElementById(id);
+        const empty = !el.value.trim();
+        el.style.border = empty ? '2px solid red' : '';
+        return empty;
+      });
       if (missing.length > 0) {
         alert("Per favore compila tutti i campi obbligatori: " + missing.join(", "));
         return;
@@ -183,6 +188,13 @@
     }
 
     window.addEventListener("DOMContentLoaded", () => {
+      document.querySelectorAll("input, textarea").forEach(el => {
+        el.addEventListener("input", () => {
+          if (el.value.trim()) {
+            el.style.border = "";
+          }
+        });
+      });
       loadPartecipanti();
       loadAttivita();
     });
